<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".EndQuizz">

    <Button
        android:id="@+id/popa_margaret_btn_again"
        style="@style/gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_margaret_imgviewfelicitari"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/popa_margaret_tv_felicitari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        style="@style/button_next"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/felicitari_scorul_tau_este_de_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/popa_margaret_imgviewfelicitari"
        android:layout_width="364dp"
        android:layout_height="531dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/descrierefelicitari"
        app:layout_constraintBottom_toTopOf="@id/popa_margaret_btn_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_margaret_tv_felicitari"
        app:srcCompat="@drawable/felicitari" />
</androidx.constraintlayout.widget.ConstraintLayout>