<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/popa_margaret_tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/testeaza_ti_cunostintele"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="24sp"
        android:background="@drawable/gradient2"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/popa_margaret_imgview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/popa_margaret_imgview"
        android:layout_width="295dp"
        android:layout_height="218dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:background="@color/culoare_primara_inchisa"
        android:contentDescription="@string/textpoza"
        app:layout_constraintBottom_toTopOf="@id/popa_margaret_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_margaret_tv_welcome"
        app:srcCompat="@drawable/happy_children_reading_kids_books_15153725" />

    <Button
        android:id="@+id/popa_margaret_btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_pressed"
        android:text="@string/start"
        android:textColor="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popa_margaret_imgview" />



</androidx.constraintlayout.widget.ConstraintLayout>